# school-scheduling-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: fea-init.md  fea-work.md
.github/workflows/: build.yml
benches/: scheduler_bench.rs
data/demo/: courses.json  rooms.json  students.json  teachers.json
local-data/fea/: progress.json
scripts/: build-json.py  generate-pdf.py  validate-json.py  verify-schedule.py
src/: error.rs  lib.rs  main.rs
src/parser/: json.rs  mod.rs  validation.rs
src/reporter/: json.rs  markdown.rs  mod.rs  text.rs
src/scheduler/: ilp_solver.rs  mod.rs  optimizer.rs  room_assigner.rs  section_creator.rs  time_assigner.rs
src/types/: constraint.rs  course.rs  mod.rs  period.rs  room.rs  schedule.rs  section.rs  student.rs  teacher.rs
src/validator/: hard_constraints.rs  mod.rs  soft_constraints.rs
